--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<version>7</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.sf.sociaal</groupId>
+	<groupId>net.sf.phat</groupId>
 	<artifactId>normmonitor</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.0-SNAPSHOT</version>
